feat: create a popup when a node is clicked

--- a/frontend/src/styles/Graph.css
+++ b/frontend/src/styles/Graph.css
@@ -34,3 +34,9 @@
   target-arrow-color: #f00 !important;
   width: 4 !important;
 }
+
+.node-popup {
+    pointer-events: none;
+    transform: translate(-50%, -100%);
+    margin-top: -10px;
+}
