feat: make entrances look distinct

--- a/frontend/src/styles/Graph.css
+++ b/frontend/src/styles/Graph.css
@@ -4,3 +4,16 @@
   target-arrow-color: #f00 !important;
   width: 4 !important;
 }
+
+.gate-node {
+  border-width: 8px !important;
+  border-color: #344E41 !important;
+  background-color: #DAD7CD !important;
+  text-outline-width: 2px !important;
+  text-outline-color: #fff !important;
+  font-weight: bold !important;
+  font-size: 14px !important;
+  text-valign: top !important;
+  width: 133% !important;  /* 1/3 bigger */
+  height: 133% !important; /* 1/3 bigger */
+}
